// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a carousel renders correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 .carousel-cell {
  height: auto;
  position: relative;
  width: 100%;
}

.emotion-0 .flickity-prev-next-button {
  background: transparent;
  border-radius: 100%;
  border: 1px solid #3150A2;
  color: transparent;
  cursor: pointer;
  display: block;
  font-size: 0;
  height: 3rem;
  line-height: 0;
  opacity: .75;
  outline: none;
  padding: 0;
  position: absolute;
  stroke: #3150A2;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transition: opacity 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  transition: opacity 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  width: 3rem;
}

.emotion-0 .flickity-prev-next-button:hover {
  background: transparent;
  color: transparent;
  opacity: 1;
  outline: none;
}

.emotion-0 .flickity-prev-next-button svg {
  fill: #3150A2;
  height: 1rem;
  stroke-width: 2;
  width: 1rem;
}

.emotion-0 .flickity-prev-next-button.previous {
  left: -3rem;
}

.emotion-0 .flickity-prev-next-button.next {
  right: -3rem;
  left: auto;
}

.emotion-0 .flickity-prev-next-button:disabled {
  cursor: not-allowed;
  opacity: .25;
}

.emotion-0:not(.no-dots) .flickity-page-dots {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center;
  width: 100%;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  position: relative;
  width: 2rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot::before {
  background: #9CB1DC;
  content: '';
  border-radius: 99999px;
  -webkit-transition: background 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  transition: background 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  height: 1.0rem;
  width: 1.0rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot:hover::before {
  opacity: 1;
  background: #3150A2;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot.is-selected::before {
  opacity: .75;
  background: #3150A2;
}

<div>
  <div
    class="emotion-0 emotion-1 flickity-enabled"
    tabindex="0"
  >
    <div
      class="flickity-viewport"
      style="height: 0px;"
    >
      <div
        class="flickity-slider"
        style="left: 0px;"
      >
        <div
          class="carousel-cell is-selected"
          style="position: absolute;"
        >
          0
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          1
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          2
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          3
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          4
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          5
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          6
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          7
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          8
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell "
          style="position: absolute;"
        >
          9
        </div>
      </div>
    </div>
    <button
      aria-label="Previous"
      class="flickity-button flickity-prev-next-button previous"
      disabled=""
      type="button"
    >
      <svg
        class="flickity-button-icon"
        viewBox="0 0 100 100"
      >
        <path
          class="arrow"
          d="M 46.19 3.452 L 53.333 10.119 L 18.571 45.357 L 100 45.357 L 100 54.881 L 18.571 54.881 L 53.571 90.119 L 47.381 96.548 L 0 50.357 L 46.19 3.452 Z"
        />
      </svg>
    </button>
    <button
      aria-label="Next"
      class="flickity-button flickity-prev-next-button next"
      disabled=""
      type="button"
    >
      <svg
        class="flickity-button-icon"
        viewBox="0 0 100 100"
      >
        <path
          class="arrow"
          d="M 46.19 3.452 L 53.333 10.119 L 18.571 45.357 L 100 45.357 L 100 54.881 L 18.571 54.881 L 53.571 90.119 L 47.381 96.548 L 0 50.357 L 46.19 3.452 Z"
          transform="translate(100, 100) rotate(180) "
        />
      </svg>
    </button>
    <ol
      class="flickity-page-dots"
    />
  </div>
</div>
`;

exports[`a hero carousel with a heading renders correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 .carousel-cell {
  height: auto;
  position: relative;
  width: 100%;
}

.emotion-0 .flickity-prev-next-button {
  background: transparent;
  border-radius: 100%;
  border: 1px solid #3150A2;
  color: transparent;
  cursor: pointer;
  display: block;
  font-size: 0;
  height: 3rem;
  line-height: 0;
  opacity: .75;
  outline: none;
  padding: 0;
  position: absolute;
  stroke: #3150A2;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transition: opacity 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  transition: opacity 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  width: 3rem;
  display: none;
}

.emotion-0 .flickity-prev-next-button:hover {
  background: transparent;
  color: transparent;
  opacity: 1;
  outline: none;
}

.emotion-0 .flickity-prev-next-button svg {
  fill: #3150A2;
  height: 1rem;
  stroke-width: 2;
  width: 1rem;
}

.emotion-0 .flickity-prev-next-button.previous {
  left: -3rem;
}

.emotion-0 .flickity-prev-next-button.next {
  right: -3rem;
  left: auto;
}

.emotion-0 .flickity-prev-next-button:disabled {
  cursor: not-allowed;
  opacity: .25;
}

@media screen and (min-width:1200px) {
  .emotion-0 .flickity-prev-next-button {
    border: none;
    background: #FFFFFF;
    color: #2F4DA1;
    opacity: 1;
  }

  .emotion-0 .flickity-prev-next-button.previous {
    left: 1.6rem;
  }

  .emotion-0 .flickity-prev-next-button.next {
    right: 1.6rem;
  }

  .emotion-0 .flickity-prev-next-button.next,
  .emotion-0 .flickity-prev-next-button.previous {
    top: calc(50% - 5.2rem);
  }

  .emotion-0 .flickity-prev-next-button:hover {
    background: #FFFFFF;
    color: #2F4DA1;
  }
}

.emotion-0:not(.no-dots) {
  overflow: hidden;
}

.emotion-0:not(.no-dots) .flickity-page-dots {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center;
  width: 100%;
  margin-top: 1.6rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  position: relative;
  width: 2rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot::before {
  background: #9CB1DC;
  content: '';
  border-radius: 99999px;
  -webkit-transition: background 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  transition: background 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  height: 1.0rem;
  width: 1.0rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot:hover::before {
  opacity: 1;
  background: #3150A2;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot.is-selected::before {
  opacity: .75;
  background: #3150A2;
}

.emotion-0:not(.no-dots) .flickity-page-dots,
.emotion-0:not(.no-dots) .flickity-page-dots .dot {
  height: 0.8rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot::before {
  height: 0.8rem;
  width: 0.8rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot.is-selected::before {
  background: #2F4DA1;
}

@media screen and (min-width:1200px) {
  .emotion-0:not(.no-dots) .flickity-page-dots {
    margin-top: 3.2rem;
  }
}

.emotion-0:not(.no-dots) .carousel-cell {
  margin-right: 1.6rem;
}

@media screen and (min-width:1200px) {
  .emotion-0:not(.no-dots) .carousel-cell {
    margin-right: 9.5vw;
  }
}

<div>
  <div
    class="emotion-0 emotion-1 flickity-enabled is-draggable"
    tabindex="0"
  >
    <div
      class="flickity-viewport"
      style="height: 0px;"
    >
      <div
        class="flickity-slider"
        style="left: 0px; transform: translateX(NaN%);"
      >
        <div
          class="carousel-cell is-selected"
          style="position: absolute;"
        >
          0
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          1
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          2
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          3
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          4
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          5
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          6
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          7
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          8
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          9
        </div>
      </div>
    </div>
    <button
      aria-label="Previous"
      class="flickity-button flickity-prev-next-button previous"
      disabled=""
      type="button"
    >
      <svg
        class="flickity-button-icon"
        viewBox="0 0 100 100"
      >
        <path
          class="arrow"
          d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z"
        />
      </svg>
    </button>
    <button
      aria-label="Next"
      class="flickity-button flickity-prev-next-button next"
      type="button"
    >
      <svg
        class="flickity-button-icon"
        viewBox="0 0 100 100"
      >
        <path
          class="arrow"
          d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z"
          transform="translate(100, 100) rotate(180) "
        />
      </svg>
    </button>
    <ol
      class="flickity-page-dots"
    >
      <li
        aria-current="step"
        aria-label="Page dot 1"
        class="dot is-selected"
      />
      <li
        aria-label="Page dot 2"
        class="dot"
      />
      <li
        aria-label="Page dot 3"
        class="dot"
      />
      <li
        aria-label="Page dot 4"
        class="dot"
      />
      <li
        aria-label="Page dot 5"
        class="dot"
      />
      <li
        aria-label="Page dot 6"
        class="dot"
      />
      <li
        aria-label="Page dot 7"
        class="dot"
      />
      <li
        aria-label="Page dot 8"
        class="dot"
      />
      <li
        aria-label="Page dot 9"
        class="dot"
      />
      <li
        aria-label="Page dot 10"
        class="dot"
      />
    </ol>
  </div>
</div>
`;

exports[`a hero carousel with no heading renders correctly 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-0 .carousel-cell {
  height: auto;
  position: relative;
  width: 100%;
}

.emotion-0 .flickity-prev-next-button {
  background: transparent;
  border-radius: 100%;
  border: 1px solid #3150A2;
  color: transparent;
  cursor: pointer;
  display: block;
  font-size: 0;
  height: 3rem;
  line-height: 0;
  opacity: .75;
  outline: none;
  padding: 0;
  position: absolute;
  stroke: #3150A2;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  -webkit-transition: opacity 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  transition: opacity 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  width: 3rem;
  display: none;
}

.emotion-0 .flickity-prev-next-button:hover {
  background: transparent;
  color: transparent;
  opacity: 1;
  outline: none;
}

.emotion-0 .flickity-prev-next-button svg {
  fill: #3150A2;
  height: 1rem;
  stroke-width: 2;
  width: 1rem;
}

.emotion-0 .flickity-prev-next-button.previous {
  left: -3rem;
}

.emotion-0 .flickity-prev-next-button.next {
  right: -3rem;
  left: auto;
}

.emotion-0 .flickity-prev-next-button:disabled {
  cursor: not-allowed;
  opacity: .25;
}

@media screen and (min-width:1200px) {
  .emotion-0 .flickity-prev-next-button {
    border: none;
    background: #FFFFFF;
    color: #2F4DA1;
    opacity: 1;
  }

  .emotion-0 .flickity-prev-next-button.previous {
    left: 1.6rem;
  }

  .emotion-0 .flickity-prev-next-button.next {
    right: 1.6rem;
  }

  .emotion-0 .flickity-prev-next-button.next,
  .emotion-0 .flickity-prev-next-button.previous {
    top: 50%;
  }

  .emotion-0 .flickity-prev-next-button:hover {
    background: #FFFFFF;
    color: #2F4DA1;
  }
}

.emotion-0:not(.no-dots) {
  overflow: hidden;
}

.emotion-0:not(.no-dots) .flickity-page-dots {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center;
  width: 100%;
  margin-top: 1.6rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  position: relative;
  width: 2rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot::before {
  background: #9CB1DC;
  content: '';
  border-radius: 99999px;
  -webkit-transition: background 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  transition: background 400ms cubic-bezier(0.390,0.575,0.565,1.000);
  height: 1.0rem;
  width: 1.0rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot:hover::before {
  opacity: 1;
  background: #3150A2;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot.is-selected::before {
  opacity: .75;
  background: #3150A2;
}

.emotion-0:not(.no-dots) .flickity-page-dots,
.emotion-0:not(.no-dots) .flickity-page-dots .dot {
  height: 0.8rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot::before {
  height: 0.8rem;
  width: 0.8rem;
}

.emotion-0:not(.no-dots) .flickity-page-dots .dot.is-selected::before {
  background: #2F4DA1;
}

@media screen and (min-width:1200px) {
  .emotion-0:not(.no-dots) .flickity-page-dots {
    margin-top: 3.2rem;
  }
}

.emotion-0:not(.no-dots) .carousel-cell {
  margin-right: 1.6rem;
}

@media screen and (min-width:1200px) {
  .emotion-0:not(.no-dots) .carousel-cell {
    margin-right: 9.5vw;
  }
}

<div>
  <div
    class="emotion-0 emotion-1 flickity-enabled is-draggable"
    tabindex="0"
  >
    <div
      class="flickity-viewport"
      style="height: 0px;"
    >
      <div
        class="flickity-slider"
        style="left: 0px; transform: translateX(NaN%);"
      >
        <div
          class="carousel-cell is-selected"
          style="position: absolute;"
        >
          0
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          1
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          2
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          3
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          4
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          5
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          6
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          7
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          8
        </div>
        <div
          aria-hidden="true"
          class="carousel-cell"
          style="position: absolute;"
        >
          9
        </div>
      </div>
    </div>
    <button
      aria-label="Previous"
      class="flickity-button flickity-prev-next-button previous"
      disabled=""
      type="button"
    >
      <svg
        class="flickity-button-icon"
        viewBox="0 0 100 100"
      >
        <path
          class="arrow"
          d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z"
        />
      </svg>
    </button>
    <button
      aria-label="Next"
      class="flickity-button flickity-prev-next-button next"
      type="button"
    >
      <svg
        class="flickity-button-icon"
        viewBox="0 0 100 100"
      >
        <path
          class="arrow"
          d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z"
          transform="translate(100, 100) rotate(180) "
        />
      </svg>
    </button>
    <ol
      class="flickity-page-dots"
    >
      <li
        aria-current="step"
        aria-label="Page dot 1"
        class="dot is-selected"
      />
      <li
        aria-label="Page dot 2"
        class="dot"
      />
      <li
        aria-label="Page dot 3"
        class="dot"
      />
      <li
        aria-label="Page dot 4"
        class="dot"
      />
      <li
        aria-label="Page dot 5"
        class="dot"
      />
      <li
        aria-label="Page dot 6"
        class="dot"
      />
      <li
        aria-label="Page dot 7"
        class="dot"
      />
      <li
        aria-label="Page dot 8"
        class="dot"
      />
      <li
        aria-label="Page dot 9"
        class="dot"
      />
      <li
        aria-label="Page dot 10"
        class="dot"
      />
    </ol>
  </div>
</div>
`;
